--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#root {
+    height: 100vh;
+    overflow: auto;
+    width: 100%;
+    background-color: rgb(235, 235, 255);
+    font-family: "Open Sans", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+}
